--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,11 @@ button:hover {
   border-color: #bd1818;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
